[package]
name = "tits-rs"
version = "0.0.2"
authors = ["stuckinforloop <device.neel@gmail.com>"]
license = "MIT"
edition = "2021"
description = "(touch) typing in terminal space"
repository = "https://github.com/stuckinforloop/tits/"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
rand = "0.8.4"
tokio-util = "0.7.10"

[[bin]]
name = "tits"
path = "src/main.rs"
